Incluindo mensagem para parametrizar a execucao do aplicativo